...
  return (
    <SafeAreaView style={styles.container}>
      <View style={styles.content}>
        <View style={styles.header}>
          <Text style={styles.title} testID='ordersTitle' accessibilityLabel='ordersTitle'>{t('orders.title', 'Mis pedidos')}</Text>
          {lastUpdated && (
            <Text style={styles.lastUpdatedText} testID='last-updated-orders' accessibilityLabel='last-updated-orders'>{formattedLastUpdated}</Text>
          )}
        </View>
        <View style={styles.searchContainer}>
          <View style={styles.searchRow}>
            <TextInput
              style={styles.searchInput}
...
