...
  }

  return (
    <SafeAreaView style={styles.container}>
      <View style={styles.content}>
        <View style={styles.header}>
          <Text style={styles.title} testID="homeScreenTitle" accessibilityLabel='homeScreenTitle'>
            {t('home.title')}
          </Text>
          {lastUpdated && (
            <Text style={styles.lastUpdatedText} testID='last-updated-text' accessibilityLabel='last-updated-text'>{formattedLastUpdated}</Text>
          )}
        </View>
...
