# Add Product to Cart
appId: com.proyecto_final_miso.vendedoresmovil
---
- launchApp
- tapOn:
    id: "loginEmailInput"
- inputText: "simon1@ccp.com"
- tapOn:
    id: "loginPasswordInput"
- inputText: "test"
- hideKeyboard
- tapOn:
    id: "loginSubmitButton"
- assertVisible:
    id: "homeScreenTitle"
- assertVisible:
    id: "product-list"
- assertVisible:
    id: "product-row-.*"
    index: 0
- tapOn:
    id: "product-row-.*"
    index: 0
- assertVisible:
    id: "add-to-cart-button-.*"
- tapOn:
    id: "add-to-cart-button-.*"
- tapOn:
    id: "cart-icon"
- assertVisible:
    id: "cart-content"
- assertVisible:
    id: "product-row-.*"
    index: 0
